<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Aqui se añaden las nuevas opciones del menú-->

    <item
        android:id="@+id/Idioma"
        android:icon="@drawable/icono_idioma"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|withText"
        android:title="@string/labelIdioma"/>

    <item
        android:id="@+id/Salir"
        android:icon="@drawable/icono_salir"
        android:orderInCategory="2"
        app:showAsAction="ifRoom|withText"
        android:title="@string/labelSalir"/>

    <item
        android:id="@+id/Informacion"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="3"
        android:title="@string/labelInformacion"/>

    <item
        android:id="@+id/Ayuda"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="4"
        android:title="@string/labelAyuda"/>
</menu>